--- a/SHAHIN-CV1.html
+++ b/SHAHIN-CV1.html
@@ -88,7 +88,7 @@
                 <!-- Portfolio Items -->
                 <div class="portfolio-item bg-white rounded-lg shadow-lg overflow-hidden" data-aos="fade-up">
                     <div class="relative group">
-                        <img src="/api/placeholder/400/300" alt="Project 1" class="w-full transition-transform duration-500 group-hover:scale-110">
+                        <img src="What-is-marketing.webp" alt="Project 1" class="w-full transition-transform duration-500 group-hover:scale-110">
                         <div class="absolute inset-0 bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <button class="bg-white text-blue-600 px-6 py-2 rounded-full hover:bg-blue-50 transition">View Project</button>
                         </div>
